Prevent rough logo from overlapping menu on small phones.

--- a/css/valley.css
+++ b/css/valley.css
@@ -228,6 +228,7 @@ hr.clear {
   font-weight: 900;
   text-transform: uppercase;
   font-size: 24px;
+  max-width: 70%;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-inverse .navbar-brand:hover,
